--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "mongodb": "^3.1.0-beta4",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "sass": "^1.9.0"
   },
   "devDependencies": {}
 }
